// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled menu items when offline 1`] = `
<div>
  <li
    class="jsx-665727467 disabled dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h1v15h15v1H0z"
            />
            <path
              d="M16 8v7h-3V8zm-5-6v13H8V2zM6 4v11H3V4z"
            />
          </g>
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span notAllowed"
        >
          View as Chart
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 disabled dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span notAllowed"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type CHART and type MAP 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1c-.933 0-1.816.213-2.604.593L6 3.5 7.5 3 8 4l-1.5.5.5 2L6 7l-.5-1.5L4 7l1.5 1.5h2l.5 2-1.836 3.214A5.996 5.996 0 008 14c1.494 0 2.86-.546 3.91-1.45l-.41-2.05-2-1 1-2.5h3.417a5.963 5.963 0 00-.832-2.187L11.5 6l-2-.5.454-3.175A5.992 5.992 0 008 2zM2 8a5.997 5.997 0 002.896 5.136L4 10l-.5-1.5-1.47-1.103c-.02.198-.03.4-.03.603z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Map
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type CHART and type REPORT_TABLE 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1c-.933 0-1.816.213-2.604.593L6 3.5 7.5 3 8 4l-1.5.5.5 2L6 7l-.5-1.5L4 7l1.5 1.5h2l.5 2-1.836 3.214A5.996 5.996 0 008 14c1.494 0 2.86-.546 3.91-1.45l-.41-2.05-2-1 1-2.5h3.417a5.963 5.963 0 00-.832-2.187L11.5 6l-2-.5.454-3.175A5.992 5.992 0 008 2zM2 8a5.997 5.997 0 002.896 5.136L4 10l-.5-1.5-1.47-1.103c-.02.198-.03.4-.03.603z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Map
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type EVENT_CHART and type EVENT_REPORT 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type EVENT_REPORT and type EVENT_CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h1v15h15v1H0z"
            />
            <path
              d="M16 8v7h-3V8zm-5-6v13H8V2zM6 4v11H3V4z"
            />
          </g>
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Chart
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type MAP and type CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h1v15h15v1H0z"
            />
            <path
              d="M16 8v7h-3V8zm-5-6v13H8V2zM6 4v11H3V4z"
            />
          </g>
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Chart
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type MAP and type MAP without Thematic layer 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h1v15h15v1H0z"
            />
            <path
              d="M16 8v7h-3V8zm-5-6v13H8V2zM6 4v11H3V4z"
            />
          </g>
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Chart
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 011 1v12a1 1 0 01-1 1H2a1 1 0 01-1-1V2a1 1 0 011-1zm-6.5 9H2v4h5.5zm6.5 0H8.5v4H14zM2 5v4h5.5V5zm12-3H2v2h12zM8.5 9H14V5H8.5z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Table
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`renders menu for active type REPORT_TABLE and type CHART 1`] = `
<div>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fill-rule="evenodd"
          >
            <path
              d="M0 0h1v15h15v1H0z"
            />
            <path
              d="M16 8v7h-3V8zm-5-6v13H8V2zM6 4v11H3V4z"
            />
          </g>
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Chart
        </span>
      </span>
    </a>
  </li>
  <li
    class="jsx-665727467 dense"
    data-test="dhis2-uicore-menuitem"
  >
    <a
      class="jsx-665727467"
    >
      <span
        class="jsx-665727467 icon"
      >
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 1c-.933 0-1.816.213-2.604.593L6 3.5 7.5 3 8 4l-1.5.5.5 2L6 7l-.5-1.5L4 7l1.5 1.5h2l.5 2-1.836 3.214A5.996 5.996 0 008 14c1.494 0 2.86-.546 3.91-1.45l-.41-2.05-2-1 1-2.5h3.417a5.963 5.963 0 00-.832-2.187L11.5 6l-2-.5.454-3.175A5.992 5.992 0 008 2zM2 8a5.997 5.997 0 002.896 5.136L4 10l-.5-1.5-1.47-1.103c-.02.198-.03.4-.03.603z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="jsx-665727467 label"
      >
        <span
          class="span"
        >
          View as Map
        </span>
      </span>
    </a>
  </li>
</div>
`;
